--- a/nodejs/nextjs/package.json
+++ b/nodejs/nextjs/package.json
@@ -6,18 +6,26 @@
     "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db": "prisma migrate dev --name init",
+    "db1": "prisma migrate dev --name added_job_title",
+    "db-gen": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "next": "14.1.1",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/passport": "^1.0.16",
     "@types/passport-facebook": "^3.0.3",
@@ -29,6 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
