--- a/nodejs/nextjs/package.json
+++ b/nodejs/nextjs/package.json
@@ -20,6 +20,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-saml": "^3.2.4",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5"
