--- a/nodejs/nextjs/package.json
+++ b/nodejs/nextjs/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/body-parser": "^1.19.5",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "next": "14.1.1",
